+ texte explicatif + runnable depuis progjeu